syntax = "proto3";

import "config_messages.proto";
package core.proto;

option csharp_namespace = "Core.Services";

service Config {
    rpc GetSetting(core.config.GetSettingReq) returns (core.config.GetSettingRes);
    rpc AddSetting(core.config.SetSettingReq) returns (core.config.SetSettingRes);
    rpc GetUserConfig(core.config.GetUserConfigReq) returns (core.config.GetUserConfigRes);
    rpc ResetCache(core.config.ResetCacheReq) returns (core.config.ResetCacheRes);
    rpc GetGroupConfig(core.config.GetGroupConfigReq) returns (core.config.GetGroupConfigRes);
    rpc AddGroupSetting(core.config.SetGroupSettingReq) returns (core.config.SetGroupSettingRes);
}
